# spectral-phantom-generator

./: LICENSE  README.md  case.py  image_reader.py  material_extractor.py  pyproject.toml  requirements.txt  segment.py  tissue.py  utils.py
data/: TS_tissue_types.py  TS_to_WW_convert_dict.json  parameters.py  woodardwhite.csv
data/nist/: Ba.json  C.json  Ca.json  Cl.json  Fe.json  Gd.json  H.json  I.json  K.json  Mg.json  N.json  Na.json  O.json  P.json  S.json  density.json
