[project]
name = "spectral-phantom-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.8.4",
    "nibabel==5.3.2",
    "numpy==1.26.4",
    "pandas==2.3.0",
    "scipy==1.15.3",
    "simpleitk==2.5.0",
    "torch==2.7.1",
    "totalsegmentator==2.9.0",
    "tqdm==4.66.4",
]
